Prevent zoom on ios input focus.

--- a/website-guts/assets/css/modules/forms.scss
+++ b/website-guts/assets/css/modules/forms.scss
@@ -3,7 +3,7 @@ input[type=text], input[type=url], input[type=tel], input[type=email], input[typ
   font-weight: 400;
   padding: 4px;
   color: #242424;
-  font-size: .93em;
+  font-size: 16px;
   min-height: 38px;
   width: 100%;
   margin-bottom: 5px;
